--- a/Anchor.toml
+++ b/Anchor.toml
@@ -7,6 +7,7 @@ skip-lint = false
 
 [programs.localnet]
 minigame_contract = "AhGizHCqVHXgmPtV7QTskda3EpP1XgCw2ECSKuQYRQkP"
+nft-manager-wrapper = "5Pz73eRmegxqtFDA2zjUGT6iYPxfMrmPEbDu7NcYSKGy"
 
 [registry]
 url = "https://api.apr.dev"
