--- a/Anchor.toml
+++ b/Anchor.toml
@@ -3,11 +3,11 @@ package_manager = "yarn"
 
 [features]
 resolution = true
-skip-lint = false
+skip-lint = true
 
 [programs.localnet]
 minigame_contract = "AhGizHCqVHXgmPtV7QTskda3EpP1XgCw2ECSKuQYRQkP"
-nft-manager-wrapper = "5Pz73eRmegxqtFDA2zjUGT6iYPxfMrmPEbDu7NcYSKGy"
+nft_manager_wrapper = "5Pz73eRmegxqtFDA2zjUGT6iYPxfMrmPEbDu7NcYSKGy"
 
 [registry]
 url = "https://api.apr.dev"
